[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Images/Icons/PlotWeaver_Up.svg" type="Texture" id=1]
[ext_resource path="res://Scripts/PW_ToolButton.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="PW_ToolButton" type="PanelContainer"]
margin_right = 192.0
margin_bottom = 32.0
custom_styles/panel = SubResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 192.0
margin_bottom = 32.0
mouse_filter = 2

[node name="Icon_Panel" type="Panel" parent="HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )

[node name="Icon_TextureRect" type="TextureRect" parent="HBoxContainer/Icon_Panel"]
modulate = Color( 0, 0, 0, 0.498039 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -11.7675
margin_top = -13.0075
margin_right = 12.2325
margin_bottom = 10.9925
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name_Label" type="Label" parent="HBoxContainer"]
margin_left = 36.0
margin_top = 9.0
margin_right = 91.0
margin_bottom = 23.0
text = "Move up"
[connection signal="gui_input" from="." to="." method="_on_PW_ToolButton_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_PW_ToolButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PW_ToolButton_mouse_exited"]
